--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -54,10 +54,10 @@
           <td ><%= superheroe.creador %></td>
           <td >
             <a href="/api/heroes/<%= superheroe._id %>/editar">
-              <i class="fa-solid fa-file-pen"></i> <span class="hidden sm:inline-table">Editar</span>
+              <i class="fa-solid fa-file-pen"></i> <span class="">Editar</span>
             </a>
             <a href="/api/heroes/heroe/<%= superheroe._id %>">
-              <i class="fa-solid fa-trash"></i> <span class="hidden sm:inline-table">Eliminar</span>
+              <i class="fa-solid fa-trash"></i> <span class="">Eliminar</span>
             </a>
           </td>
           </tr>
